--- a/themes/bel/all.css
+++ b/themes/bel/all.css
@@ -615,10 +615,14 @@ p{margin:0 0 15px;}
 /* post */
 .post{
 	position:relative;
+/*
 	float:left;
+*/
 	margin:-2px 0 0;
 	padding:0 0 11px 3px;
+/*
 	width:327px;
+*/
 	color:#2c313c;
 }
 .post .heading{
