--- a/themes/bel/all.css
+++ b/themes/bel/all.css
@@ -625,14 +625,10 @@ ul.qtrans_language_chooser li{
 /* post */
 .post{
 	position:relative;
-/*
 	float:left;
-*/
 	margin:-2px 0 0;
 	padding:0 0 11px 3px;
-/*
-	width:327px;
-*/
+	width:357px;
 	color:#2c313c;
 }
 .post .heading{
@@ -671,8 +667,8 @@ ul.qtrans_language_chooser li{
 	position:relative;
 	float:right;
 	display:inline;
-	margin:-6px -22px 0 0;
-	width:221px;
+	margin:30px -22px 0 0;
+	width:231px;
 }
 .twocolumns .column-info{
 	margin-top:0;
@@ -1026,4 +1022,8 @@ ul.sitemap {
 }
 .category_post {
 	padding-bottom: 30px;
+}
+
+.full {
+	width:100%;
 }
