--- a/themes/bel/style.css
+++ b/themes/bel/style.css
@@ -99,3 +99,9 @@ Theme Name: BEL
 .section {
 	padding-bottom: 20px;
 }
+
+.heading h2 a {
+	color: black;
+	text-decoration: none;
+	font-size: 13px;
+}
