--- a/themes/bel/style.css
+++ b/themes/bel/style.css
@@ -128,3 +128,38 @@ Theme Name: BEL
 .heading h5 {
 	font-size: 15px;
 }
+
+/* Side images style */
+
+.box-image-normal {
+  -webkit-transform: rotate(-7deg); 
+     -moz-transform: rotate(-7deg); 
+      -ms-transform: rotate(-7deg); 
+       -o-transform: rotate(-7deg); 
+          transform: rotate(-7deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.992546151641322, M12=0.12186934340514748, M21=-0.12186934340514748, M22=0.992546151641322, sizingMethod='auto expand');
+               zoom: 1;
+	background: white;
+	border-radius: 4px;
+   padding: 8px;
+  -webkit-box-shadow: 0px 0px 24px 0px #000;
+          box-shadow: 0px 0px 24px 0px #000;
+
+}
+
+.box-image-small {
+  -webkit-transform: rotate(17deg); 
+     -moz-transform: rotate(17deg); 
+      -ms-transform: rotate(17deg); 
+       -o-transform: rotate(17deg); 
+          transform: rotate(17deg);
+             filter: progid:DXImageTransform.Microsoft.Matrix(/* IE6–IE9 */
+                     M11=0.992546151641322, M12=0.12186934340514748, M21=-0.12186934340514748, M22=0.992546151641322, sizingMethod='auto expand');
+               zoom: 1;
+	background: white;
+	border-radius: 4px;
+   padding: 8px;
+  -webkit-box-shadow: 0px 0px 24px 0px #000;
+          box-shadow: 0px 0px 24px 0px #000;
+}
