--- a/themes/bel/all.css
+++ b/themes/bel/all.css
@@ -646,7 +646,7 @@ ul.qtrans_language_chooser li{
 	position:relative;
 	float:left;
 	margin:-2px 0 0;
-	padding:0 0 11px 3px;
+	padding:23px 0 11px 3px;
 	width:357px;
 	color:#2c313c;
 }
