Rotate image. Fix some css on project page. Add yellow icon for google maps

--- a/themes/bel/all.css
+++ b/themes/bel/all.css
@@ -686,8 +686,8 @@ ul.qtrans_language_chooser li{
 	position:relative;
 	float:right;
 	display:inline;
-	margin:30px -22px 0 0;
-	width:231px;
+	margin:0 -22px 30px 0;
+	width:221px;
 }
 .twocolumns .column-info{
 	margin-top:0;
