--- a/themes/bel/style.css
+++ b/themes/bel/style.css
@@ -105,26 +105,19 @@ Theme Name: BEL
 .post_thumbnail {
 	width:150px;
 	height:150px;
-	position:relative;
-	border-right: dotted 1px;
-	vertical-align: top;
+	float: left;
+}
+
+.thumbnail_img {
+	padding: 30px 20px;
 }
 
 .post_thumbnail img {
-	width:60%;
-	position:relative;
-	top:20%;
-	left:20%;
+	width:100%;
 }
 
 .assoc_excerpt {
 	padding: 5px 0 0 10px;
-	vertical-align: top;
-}
-
-.assoc_table {
-	border-top: solid 1px;
-	border-bottom: solid 1px;
 }
 
 .heading h5 {
