--- a/themes/bel/all.css
+++ b/themes/bel/all.css
@@ -8,8 +8,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -19,7 +19,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {display: block;}
 body {line-height: 1;}
 ol, ul {list-style: none;}
@@ -1016,6 +1016,7 @@ ul.qtrans_language_chooser li{
 .popup li .email{background-position:-21px -24px;}
 .popup li .facebook{background-position:-38px -24px;}
 .popup li .twitter{background-position:-55px -24px;}
+.popup li .google-plus{background-position:-72px -24px;}
 /* footer-menu */
 #footer-home .footer-menu{
 	position:relative;
